--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -9,6 +9,15 @@ spring:
 logging:
   level:
     root: INFO
+    org:
+      togglz: trace
 application:
   uiHost: http://localhost:3000
   movieServiceHost: http://ec2-3-109-212-163.ap-south-1.compute.amazonaws.com:4567/
+
+togglz:
+  console:
+    enabled: true
+    path: /togglz-console
+    secured: false
+    use-management-port: false
