[Saravana / Venu] Add. security for featureToggles in security config

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,8 @@ spring:
 logging:
   level:
     root: INFO
+    org:
+      togglz: trace
 application:
   uiHost: ${UI_HOST}
   movieServiceHost: ${MOVIE_SERVICE_HOST}
