--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -13,7 +13,7 @@ logging:
       togglz: trace
 application:
   uiHost: http://localhost:3000
-  movieServiceHost: http://ec2-3-109-212-163.ap-south-1.compute.amazonaws.com:4567/
+  movieServiceHost: http://localhost:8000/
 togglz:
   console:
     enabled: true
